# toy_ml_lib

./: .gitignore  Arena.cpp  Arena.hpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  main  main.cpp  new  new.cpp
include/: Matrix.hpp  model.hpp  utility.hpp
scripts/: data.py
src/core/: Matrix.cpp
src/data/: data.py
src/nn/: model.cpp
src/utils/: utility.cpp
